--- a/ProjetoDoacaoSangue/DoacaoSangue.Web/Views/Shared/_Layout.cshtml
+++ b/ProjetoDoacaoSangue/DoacaoSangue.Web/Views/Shared/_Layout.cshtml
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Doação de Sangue - Web</title>
-    @Styles.Render("~/Content/css/login")
     @Scripts.Render("~/bundles/modernizr")
+    @Styles.Render("~/Content/css")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -22,7 +22,6 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Solicitações", "Index", "SolicitacaoBolsa")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>@Html.ActionLink("Sair", "Logoff", "Account")</li>
@@ -31,6 +30,10 @@
         </div>
     </div>
     <div class="container body-content">
+        @if (TempData["MsgOk"] != null)
+        {
+            <div class="alert alert-success" role="alert">@TempData["MsgOk"]</div>
+        }
         @RenderBody()
         <hr />
         <footer>
@@ -38,6 +41,8 @@
         </footer>
     </div>
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("script", false)
 </body>
 </html>
